--- a/PhotosExample/PhotosExample/Base.lproj/Main.storyboard
+++ b/PhotosExample/PhotosExample/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VpH-11-waP">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -27,6 +27,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="3Vp-jX-7ZJ" kind="show" id="yag-46-Egh"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -44,13 +47,80 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="MTr-pO-EX5" secondAttribute="bottom" id="y9M-h8-dEC"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Xco-rc-UJj"/>
                     <connections>
                         <outlet property="tableView" destination="MTr-pO-EX5" id="WQi-yK-BUk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="115"/>
+            <point key="canvasLocation" x="1042.0289855072465" y="114.50892857142857"/>
+        </scene>
+        <!--Image Zoom View Controller-->
+        <scene sceneID="kLD-ta-Ceu">
+            <objects>
+                <viewController id="3Vp-jX-7ZJ" customClass="ImageZoomViewController" customModule="PhotosExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uu2-UJ-S09">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" maximumZoomScale="3" translatesAutoresizingMaskIntoConstraints="NO" id="mkM-XW-QjY">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ueT-CK-KpB">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="rMq-Iy-VQP" firstAttribute="bottom" secondItem="ueT-CK-KpB" secondAttribute="bottom" constant="-774" id="26e-Ia-ELC"/>
+                                    <constraint firstItem="ueT-CK-KpB" firstAttribute="height" secondItem="mkM-XW-QjY" secondAttribute="height" id="ApO-J6-aeL"/>
+                                    <constraint firstItem="ueT-CK-KpB" firstAttribute="leading" secondItem="jw1-lf-Yy3" secondAttribute="leading" id="Vdp-Ik-VdD"/>
+                                    <constraint firstItem="ueT-CK-KpB" firstAttribute="width" secondItem="mkM-XW-QjY" secondAttribute="width" id="YKZ-lV-rEs"/>
+                                    <constraint firstItem="ueT-CK-KpB" firstAttribute="top" secondItem="jw1-lf-Yy3" secondAttribute="top" id="aF5-yn-8Xm"/>
+                                    <constraint firstItem="rMq-Iy-VQP" firstAttribute="trailing" secondItem="ueT-CK-KpB" secondAttribute="trailing" constant="-414" id="lTJ-9E-jWR"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="rMq-Iy-VQP"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="jw1-lf-Yy3"/>
+                                <connections>
+                                    <outlet property="delegate" destination="3Vp-jX-7ZJ" id="MoS-fA-GAl"/>
+                                </connections>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="4hq-am-WlY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="mkM-XW-QjY" firstAttribute="top" secondItem="4hq-am-WlY" secondAttribute="top" id="00z-wo-KMc"/>
+                            <constraint firstItem="mkM-XW-QjY" firstAttribute="leading" secondItem="4hq-am-WlY" secondAttribute="leading" id="CBs-pD-dvZ"/>
+                            <constraint firstItem="mkM-XW-QjY" firstAttribute="bottom" secondItem="4hq-am-WlY" secondAttribute="bottom" id="Hu7-gW-dza"/>
+                            <constraint firstItem="mkM-XW-QjY" firstAttribute="trailing" secondItem="4hq-am-WlY" secondAttribute="trailing" id="JcV-g0-ZEf"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="260-9I-1mV"/>
+                    <connections>
+                        <outlet property="imageView" destination="ueT-CK-KpB" id="fcD-H8-G4V"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cvz-vP-u4h" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1831.8840579710147" y="114.50892857142857"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Faw-S4-Pil">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VpH-11-waP" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="e5k-ap-Odi">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="8d1-3F-7Nv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lPk-uw-vHU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="114.50892857142857"/>
         </scene>
     </scenes>
     <resources>
