--- a/PhotosExample/PhotosExample/Base.lproj/Main.storyboard
+++ b/PhotosExample/PhotosExample/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--사진들-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PhotosExample" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="MTr-pO-EX5">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="B6i-QW-aev">
@@ -47,7 +47,17 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="MTr-pO-EX5" secondAttribute="bottom" id="y9M-h8-dEC"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Xco-rc-UJj"/>
+                    <toolbarItems>
+                        <barButtonItem title="Item" id="zMw-XE-cRh"/>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" title="사진들" id="OPG-7Y-h1B">
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="vPG-FU-5u4">
+                            <connections>
+                                <action selector="touchUpRefreshButtonWith_sender:" destination="BYZ-38-t0r" id="1oz-TD-O81"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="MTr-pO-EX5" id="WQi-yK-BUk"/>
                     </connections>
@@ -65,10 +75,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" maximumZoomScale="3" translatesAutoresizingMaskIntoConstraints="NO" id="mkM-XW-QjY">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ueT-CK-KpB">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -95,7 +105,11 @@
                             <constraint firstItem="mkM-XW-QjY" firstAttribute="trailing" secondItem="4hq-am-WlY" secondAttribute="trailing" id="JcV-g0-ZEf"/>
                         </constraints>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem systemItem="refresh" id="Boo-fY-aO5"/>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" id="260-9I-1mV"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="imageView" destination="ueT-CK-KpB" id="fcD-H8-G4V"/>
                     </connections>
@@ -107,13 +121,17 @@
         <!--Navigation Controller-->
         <scene sceneID="Faw-S4-Pil">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VpH-11-waP" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="VpH-11-waP" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="e5k-ap-Odi">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8xs-Vm-awB">
+                        <rect key="frame" x="0.0" y="813" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="8d1-3F-7Nv"/>
                     </connections>
