--- a/FriendsCollection/FriendsCollection/Base.lproj/Main.storyboard
+++ b/FriendsCollection/FriendsCollection/Base.lproj/Main.storyboard
@@ -22,25 +22,53 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0t1-H9-FAi">
-                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="itemSize" width="235" height="250"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="8Wu-o0-2hC">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="8Wu-o0-2hC" customClass="FriendCollectionViewCell" customModule="FriendsCollection" customModuleProvider="target">
+                                        <rect key="frame" x="89.5" y="0.0" width="235" height="250"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ZPS-dS-Ra6">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="235" height="250"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ign-hB-AfM">
+                                                    <rect key="frame" x="16" y="36.5" width="203" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWC-kB-ood">
+                                                    <rect key="frame" x="16" y="8" width="203" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" name="AccentColor"/>
+                                            <constraints>
+                                                <constraint firstItem="IWC-kB-ood" firstAttribute="leading" secondItem="ZPS-dS-Ra6" secondAttribute="leading" constant="16" id="1pb-BU-yhL"/>
+                                                <constraint firstItem="ign-hB-AfM" firstAttribute="centerX" secondItem="IWC-kB-ood" secondAttribute="centerX" id="EEm-Aw-ewO"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ign-hB-AfM" secondAttribute="bottom" constant="8" id="K41-YT-rdc"/>
+                                                <constraint firstItem="IWC-kB-ood" firstAttribute="top" secondItem="ZPS-dS-Ra6" secondAttribute="top" constant="8" id="NJ4-K8-SSz"/>
+                                                <constraint firstItem="ign-hB-AfM" firstAttribute="trailing" secondItem="IWC-kB-ood" secondAttribute="trailing" id="WVT-4y-ed2"/>
+                                                <constraint firstItem="ign-hB-AfM" firstAttribute="top" secondItem="IWC-kB-ood" secondAttribute="bottom" constant="8" id="jQi-Dz-mk2"/>
+                                                <constraint firstAttribute="trailing" secondItem="IWC-kB-ood" secondAttribute="trailing" constant="16" id="zyZ-q3-tVf"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
-                                        <color key="backgroundColor" name="AccentColor"/>
+                                        <size key="customSize" width="235" height="250"/>
+                                        <connections>
+                                            <outlet property="adressLabel" destination="ign-hB-AfM" id="cBc-yb-5lA"/>
+                                            <outlet property="nameAgeLabel" destination="IWC-kB-ood" id="ZkC-Ho-Fgl"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="nbg-0o-klo"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="dwN-YC-03L"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="LUn-W2-ba1"/>
                                 </connections>
                             </collectionView>
                         </subviews>
@@ -53,10 +81,13 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ASv-Hz-4QC" secondAttribute="trailing" id="mxM-9K-4du"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="ASv-Hz-4QC" id="tzf-mZ-u5Z"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="100"/>
+            <point key="canvasLocation" x="131.8840579710145" y="99.776785714285708"/>
         </scene>
     </scenes>
     <resources>
